<resources>
    <string name="app_name">Educards UNQ</string>

    <string name="play">Play</string>

    <string name="playerName">Nombre</string>

    <string name="card1">Carta1</string>
    <string name="card2">Carta2</string>
    <string name="card3">Carta3</string>
    <string name="card4">Carta4</string>
    <string name="card5">Carta5</string>

    <string name="tablero">Tablero</string>

    <string name="slot1">Slot1</string>
    <string name="slot2">Slot2</string>
    <string name="slot3">Slot3</string>
    <string name="slot4">Slot4</string>
    <string name="slot5">Slot5</string>

</resources>
